Prevent exception in the log
Also speed up the external link check by avoiding checking each bug submission link in the rendered docs which only differs by its parameter.

Closes #22200